Added {seasonize} binding

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -585,6 +585,12 @@
 							<td>[String:Any]</td>
 						</tr>
 						<tr>
+							<td>seasonize</td>
+							<td>dynamic SxE mapping</td>
+							<td>&lt;mapping&gt;</td>
+							<td>[String:Any]</td>
+						</tr>
+						<tr>
 							<td>fn</td>
 							<td>current filename</td>
 							<td>Serenity</td>
