Add AnimeList and XEM docs

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -740,6 +740,18 @@
 							<td>&lt;list of bindings&gt;</td>
 							<td>[String:Any]*</td>
 						</tr>
+						<tr>
+							<td>AnimeList</td>
+							<td><a href="https://github.com/ScudLee/anime-lists">Anime Lists</a> mapper</td>
+							<td>&lt;mapping&gt;</td>
+							<td>Episode</td>
+						</tr>
+						<tr>
+							<td>XEM</td>
+							<td><a href="http://thexem.de/">XEM</a> mapper</td>
+							<td>&lt;mapping&gt;</td>
+							<td>Episode</td>
+						</tr>
 					</table>
 
 					<h2 class="reference" id="functions">
