--- a/www.filebot.net/script.html
+++ b/www.filebot.net/script.html
@@ -58,12 +58,27 @@
 
 					<h3 id="repository">Script Repository</h3>
 					<p class="description">
-					Find scripts for common tasks <a href="https://www.filebot.net/forums/viewtopic.php?f=4&amp;t=5#p5">here</a>. You can just use these scripts straight 
+					Find scripts for common tasks <a href="https://www.filebot.net/forums/viewtopic.php?t=5">here</a>. You can just use these scripts straight 
 					away or as a reference for building your own more advanced scripts. If you wrote a really useful script 
-					please <a href="https://www.filebot.net/forums/viewtopic.php?f=4&amp;t=5">share it with us</a>.
+					please <a href="https://www.filebot.net/forums/viewforum.php?f=4">share it with us</a>.
 					</p>
 					<div style="margin: 12px 300px 20px 25px; padding: 5px; border: thin dotted lavender; background: #FDFDFF">
-						<span style="text-decoration: underline">Script Index:</span><ul style="margin:3px"><li><a href="https://www.filebot.net/forums/viewtopic.php?f=4&amp;t=215" class="postlink">Automated Media Center</a></li><li><a href="https://www.filebot.net/forums/viewtopic.php?f=4&amp;t=5#p204" class="postlink">Fetch Artwork and Nfo for TV Shows</a></li><li><a href="https://www.filebot.net/forums/viewtopic.php?f=4&amp;t=5#p205" class="postlink">Fetch Artwork and Nfo for Movies</a></li><li><a href="https://www.filebot.net/forums/viewtopic.php?f=4&amp;t=5#p8871" class="postlink">Fetch subtitles for all files</a></li><li><a href="https://www.filebot.net/forums/viewtopic.php?f=4&amp;t=5#p1341" class="postlink">The Cleaner - Delete left over files and folders</a></li><li><a href="https://www.filebot.net/forums/viewtopic.php?f=4&amp;t=5#p2459" class="postlink">Query Rename History</a></li><li><a href="https://www.filebot.net/forums/viewtopic.php?f=4&amp;t=5#p2485" class="postlink">Revert Renamed Files to their Original Names</a></li><li><a href="https://www.filebot.net/forums/viewtopic.php?f=4&amp;t=5#p5394" class="postlink">View or Clear Extended Attributes</a></li><li><a href="https://www.filebot.net/forums/viewtopic.php?f=4&amp;t=5#p2211" class="postlink">Rename All Media Folder by Folder</a></li><li><a href="https://www.filebot.net/forums/viewtopic.php?f=4&amp;t=5#p7188" class="postlink">Convert Absolute to SxE numbers</a></li><li><a href="https://www.filebot.net/forums/viewtopic.php?f=4&amp;t=5#p2100" class="postlink">Filename: Find &amp; Replace</a></li><li><a href="https://www.filebot.net/forums/viewtopic.php?f=4&amp;t=5#p53" class="postlink">Media Index CSV</a></li><li><a href="https://www.filebot.net/forums/viewtopic.php?f=4&amp;t=5#p12396" class="postlink">Verify File Integrity</a></li><li><a href="https://www.filebot.net/forums/viewtopic.php?f=4&amp;t=5#p19132" class="postlink">Find missing Episodes</a></li><li><a href="https://www.filebot.net/forums/viewtopic.php?f=4&amp;t=5#p23171" class="postlink">Find Duplicate Movie or Episode Files</a></li></ul>
+						<span style="text-decoration: underline">Script Index:</span>
+						<ul style="margin: 3px">
+							<li><a href="https://www.filebot.net/forums/viewtopic.php?t=215#p1561">Automated Media Center</a></li>
+							<li><a href="https://www.filebot.net/forums/viewtopic.php?t=5#p204">Fetch artwork and nfo files for TV Shows</a></li>
+							<li><a href="https://www.filebot.net/forums/viewtopic.php?t=5#p205">Fetch artwork and nfo files for Movies</a></li>
+							<li><a href="https://www.filebot.net/forums/viewtopic.php?t=5#p8871">Fetch subtitles for all files</a></li>
+							<li><a href="https://www.filebot.net/forums/viewtopic.php?t=5#p1341">Delete left behind clutter files and empty folders</a></li>
+							<li><a href="https://www.filebot.net/forums/viewtopic.php?t=5#p2459">Query Rename History</a></li>
+							<li><a href="https://www.filebot.net/forums/viewtopic.php?t=5#p5394">View or Clear Extended Attributes</a></li>
+							<li><a href="https://www.filebot.net/forums/viewtopic.php?t=5#p2100">File Path: Find &amp; Replace</a></li>
+							<li><a href="https://www.filebot.net/forums/viewtopic.php?t=5#p53">Export Media Index to CSV file</a></li>
+							<li><a href="https://www.filebot.net/forums/viewtopic.php?t=5#p12396">Calculate CRC32 and Verify File Integrity</a></li>
+							<li><a href="https://www.filebot.net/forums/viewtopic.php?t=5#p19132">Find Missing Episodes</a></li>
+							<li><a href="https://www.filebot.net/forums/viewtopic.php?t=5#p23171">Find Duplicate Movie or Episode files</a></li>
+							<li><a href="https://www.filebot.net/forums/viewtopic.php?t=5#p44992">Write Embedded Tags</a></li>
+						</ul>
 					</div>
 
 
