--- a/www.filebot.net/download.html
+++ b/www.filebot.net/download.html
@@ -80,6 +80,14 @@
 					</ul>
 				</div>
 
+				<div class="section download">
+					<img class="icon" src="images/package.png" alt="download" width="48" height="48" />
+					<h2>Release Archives</h2>
+					<ul class="list">
+						<li>All versions are available on our <a href="https://get.filebot.net/filebot/">Release Index</a></li>
+					</ul>
+				</div>
+
 				<p class="suggestion" style="margin-top: 250px">
 				Need some help getting started? Join the <a href="https://www.filebot.net/forums/viewforum.php?f=8">forums</a> and ask.
 				</p>
