All packages are available on our Release Index

--- a/www.filebot.net/download.html
+++ b/www.filebot.net/download.html
@@ -84,7 +84,7 @@
 					<img class="icon" src="images/package.png" alt="download" width="48" height="48" />
 					<h2>Release Archives</h2>
 					<ul class="list">
-						<li>All versions are available on our <a href="https://get.filebot.net/filebot/">Release Index</a></li>
+						<li>All packages are available on our <a href="https://get.filebot.net/filebot/">Release Index</a></li>
 					</ul>
 				</div>
 
