Link to the correct page regardless of paging limits

--- a/www.filebot.net/script.html
+++ b/www.filebot.net/script.html
@@ -65,19 +65,19 @@
 					<div style="margin: 12px 300px 20px 25px; padding: 5px; border: thin dotted lavender; background: #FDFDFF">
 						<span style="text-decoration: underline">Script Index:</span>
 						<ul style="margin: 3px">
-							<li><a href="https://www.filebot.net/forums/viewtopic.php?t=215#p1561">Automated Media Center</a></li>
-							<li><a href="https://www.filebot.net/forums/viewtopic.php?t=5#p204">Fetch artwork and nfo files for TV Shows</a></li>
-							<li><a href="https://www.filebot.net/forums/viewtopic.php?t=5#p205">Fetch artwork and nfo files for Movies</a></li>
-							<li><a href="https://www.filebot.net/forums/viewtopic.php?t=5#p8871">Fetch subtitles for all files</a></li>
-							<li><a href="https://www.filebot.net/forums/viewtopic.php?t=5#p1341">Delete left behind clutter files and empty folders</a></li>
-							<li><a href="https://www.filebot.net/forums/viewtopic.php?t=5#p2459">Query Rename History</a></li>
-							<li><a href="https://www.filebot.net/forums/viewtopic.php?t=5#p5394">View or Clear Extended Attributes</a></li>
-							<li><a href="https://www.filebot.net/forums/viewtopic.php?t=5#p2100">File Path: Find &amp; Replace</a></li>
-							<li><a href="https://www.filebot.net/forums/viewtopic.php?t=5#p53">Export Media Index to CSV file</a></li>
-							<li><a href="https://www.filebot.net/forums/viewtopic.php?t=5#p12396">Calculate CRC32 and Verify File Integrity</a></li>
-							<li><a href="https://www.filebot.net/forums/viewtopic.php?t=5#p19132">Find Missing Episodes</a></li>
-							<li><a href="https://www.filebot.net/forums/viewtopic.php?t=5#p23171">Find Duplicate Movie or Episode files</a></li>
-							<li><a href="https://www.filebot.net/forums/viewtopic.php?t=5#p44992">Write Embedded Tags</a></li>
+							<li><a href="https://www.filebot.net/amc.html">Automated Media Center</a></li>
+							<li><a href="https://www.filebot.net/forums/viewtopic.php?p=204#p204">Fetch artwork and nfo files for TV Shows</a></li>
+							<li><a href="https://www.filebot.net/forums/viewtopic.php?p=205#p205">Fetch artwork and nfo files for Movies</a></li>
+							<li><a href="https://www.filebot.net/forums/viewtopic.php?p=8871#p8871">Fetch subtitles for all files</a></li>
+							<li><a href="https://www.filebot.net/forums/viewtopic.php?p=1341#p1341">Delete left behind clutter files and empty folders</a></li>
+							<li><a href="https://www.filebot.net/forums/viewtopic.php?p=2459#p2459">Query Rename History</a></li>
+							<li><a href="https://www.filebot.net/forums/viewtopic.php?p=5394#p5394">View or Clear Extended Attributes</a></li>
+							<li><a href="https://www.filebot.net/forums/viewtopic.php?p=2100#p2100">File Path: Find &amp; Replace</a></li>
+							<li><a href="https://www.filebot.net/forums/viewtopic.php?p=53#p53">Export Media Index to CSV file</a></li>
+							<li><a href="https://www.filebot.net/forums/viewtopic.php?p=12396#p12396">Calculate CRC32 and Verify File Integrity</a></li>
+							<li><a href="https://www.filebot.net/forums/viewtopic.php?p=19132#p19132">Find Missing Episodes</a></li>
+							<li><a href="https://www.filebot.net/forums/viewtopic.php?p=23171#p23171">Find Duplicate Movie or Episode files</a></li>
+							<li><a href="https://www.filebot.net/forums/viewtopic.php?p=44992#p44992">Write Embedded Tags</a></li>
 						</ul>
 					</div>
 
