--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -575,19 +575,19 @@
 						<tr>
 							<td>localize</td>
 							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=3761">dynamic localization</a></td>
-							<td>&lt;all languages&gt;</td>
+							<td>&lt;languages&gt;</td>
 							<td>[String:Any]</td>
 						</tr>
 						<tr>
 							<td>order</td>
 							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=2769">dynamic episode order</a></td>
-							<td>&lt;all episode orders&gt;</td>
+							<td>&lt;episode orders&gt;</td>
 							<td>[String:Any]</td>
 						</tr>
 						<tr>
-							<td>seasonize</td>
-							<td>dynamic SxE mapping</td>
-							<td>&lt;mapping&gt;</td>
+							<td>db</td>
+							<td>dynamic cross-reference</td>
+							<td>&lt;mapper&gt;</td>
 							<td>[String:Any]</td>
 						</tr>
 						<tr>
