--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -114,7 +114,7 @@
 					</p>
 					<h3 id="advanced">Advanced Usage</h3>
 					<p>
-					Check out the <a href="https://www.filebot.net/forums/viewtopic.php?f=4&t=4788">FileBot Command-Line Examples</a>
+					Check out the <a href="https://www.filebot.net/forums/viewtopic.php?t=4788">FileBot Command-Line Examples</a>
 					on how to use <span class="cmd">find</span> and <span class="cmd">xargs</span> in combination with <span class="cmd">filebot</span> and advanced options such as <span class="option">--db xattr</span> and <span class="option">--filter</span> for querying and processing media files and photos.
 					</p>
 
@@ -173,8 +173,13 @@
 						</tr>
 						<tr>
 							<td>--filter</td>
-							<td><a href="https://www.filebot.net/forums/viewtopic.php?f=3&amp;t=2127" target="_blank">match filter rules</a></td>
-							<td>filter expression (e.g. <span style="font-family: monospace; color: #008800">y &gt; 2000</span>)</td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=2127">match filter rules</a></td>
+							<td>filter expression</td>
+						</tr>
+						<tr>
+							<td>--mapper</td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=10996">episode mapper</a></td>
+							<td>mapper expression</td>
 						</tr>
 						<tr>
 							<td>-get-subtitles</td>
@@ -188,7 +193,7 @@
 						</tr>
 						<tr>
 							<td>--lang</td>
-							<td><a href="http://en.wikipedia.org/wiki/List_of_ISO_639-1_codes" target="_blank">2-letter language code</a></td>
+							<td><a href="http://en.wikipedia.org/wiki/List_of_ISO_639-1_codes">2-letter language code</a></td>
 							<td>en, de, fr, es, ja, zh, ...</td>
 						</tr>
 						<tr>
@@ -200,7 +205,7 @@
 									<td>Rename mode: required for tricky filenames</td>
 								</tr>
 								<tr>
-									<td>Subtitle mode: <a href="https://www.filebot.net/forums/viewtopic.php?f=3&amp;t=2615" target="_blank">enable fuzzy search</a></td>
+									<td>Subtitle mode: <a href="https://www.filebot.net/forums/viewtopic.php?t=2615" target="_blank">enable fuzzy search</a></td>
 								</tr>
 							</table>
 							</td>
@@ -259,8 +264,8 @@
 						</tr>
 						<tr>
 							<td>--mode</td>
-							<td><a href="https://www.filebot.net/forums/viewtopic.php?f=3&t=4398">interactive</a></td>
-							<td><a href="https://www.filebot.net/forums/viewtopic.php?f=3&t=4398">enable console-interactive mode</a></td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=4398">interactive</a></td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=4398">enable console-interactive mode</a></td>
 						</tr>
 						<tr>
 							<td>--log</td>
@@ -278,8 +283,13 @@
 							<td></td>
 						</tr>
 						<tr>
+							<td>-clear-history</td>
+							<td>reset rename history</td>
+							<td></td>
+						</tr>
+						<tr>
 							<td>-no-xattr</td>
-							<td>disable <a href="https://en.wikipedia.org/wiki/Extended_file_attributes" target="_blank">extended attributes</a></td>
+							<td>disable <a href="https://en.wikipedia.org/wiki/Extended_file_attributes">extended attributes</a></td>
 							<td></td>
 						</tr>
 						<tr>
