Remove Ubuntu Store links since SNAP just cause unnecessary support effort (e.g. end user confusion due to snap confinement)

--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -182,11 +182,6 @@
 					<span class="quote">Today is the day</span>
 					<h2>Download</h2>
 					<ul class="list">
-						<!--
-						<li class="windows">Available on the <a href="https://get.filebot.net/windows/2" target="windows_store">Microsoft Store</a></li>
-						<li class="macosx">Available on the <a href="https://get.filebot.net/mac/2" target="itunes_store">Mac App Store</a></li>
-						<li class="macappstore note"><span>The <a href="https://get.filebot.net/mac/2" target="itunes_store">Mac App Store</a> version does not support <a href="forums/viewtopic.php?t=5983">certain features</a>.</span></li>
-						-->
 						<li>64-bit Windows Installer: <a href="@{link.release.prefix}_x64.msi">@{release}_x64.msi</a></li>
 						<li>32-bit Windows Installer: <a href="@{link.release.prefix}_x86.msi">@{release}_x86.msi</a></li>
 						<li>Windows Portable ZIP: <a href="@{link.release.prefix}-portable.zip">@{release}-portable.zip</a></li>
@@ -199,8 +194,7 @@
 						<li>POSIX portable tarball: <a href="@{link.release.prefix}-portable.tar.xz">@{release}-portable.tar.xz</a> <small class="comment">for Linux, BSD and Solaris</small> <small class="comment">(requires OpenJDK 8)</small></li>
 						<li>Windows package is available <a href="windows/chocolatey.html">via Chocolatey</a></li>
 						<li>macOS package is available <a href="mac/brew.html">via brew cask</a></li>
-						<li>Debian package is available <a href="linux/apt.html">via APT</a></li>
-						<li>Ubuntu package is available <a href="linux/snap.html">on the Ubuntu Store</a></li>
+						<li>Ubuntu / Debian package is available <a href="linux/apt.html">via APT</a></li>
 						<li>Fedora / openSUSE / CentOS package is available <a href="linux/yum.html">via DNF and YUM</a></li>
 						<li>Synology NAS package is available <a href="linux/syno.html">via Package Center</a></li>
 						<li>QNAP NAS package is available <a href="linux/qnap.html">via App Center</a></li>
