--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -293,6 +293,11 @@
 							<td></td>
 						</tr>
 						<tr>
+							<td>-no-probe</td>
+							<td>disable media parser</td>
+							<td></td>
+						</tr>
+						<tr>
 							<td>-no-history</td>
 							<td>disable history</td>
 							<td></td>
