--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -173,7 +173,7 @@
 						</tr>
 						<tr>
 							<td>--filter</td>
-							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=2127">match filter rules</a></td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=2127">match filter</a></td>
 							<td>filter expression</td>
 						</tr>
 						<tr>
@@ -214,6 +214,11 @@
 							<td>-r</td>
 							<td>traverse folders recursively</td>
 							<td></td>
+						</tr>
+						<tr>
+							<td>--file-filter</td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=4222">input file filter</a></td>
+							<td>file filter expression</td>
 						</tr>
 						<tr>
 							<td>-check</td>
