Add -exec and --apply docs

--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -236,13 +236,13 @@
 							<td>
 							<table>
 								<tr>
-									<td>Rename mode: output folder</td>
+									<td>rename mode: output folder</td>
 								</tr>
 								<tr>
-									<td>Subtitle mode: srt <small class="comment">(enable transcode non-srt subtitles)</small></td>
+									<td>subtitle mode: srt <small class="comment">(e.g. transcode subtitles)</small></td>
 								</tr>
 								<tr>
-									<td>Checksum mode: sfv, md5, sha256</td>
+									<td>checksum mode: sfv, md5, sha256</td>
 								</tr>
 							</table>
 							</td>
@@ -264,7 +264,7 @@
 						</tr>
 						<tr>
 							<td>-script</td>
-							<td><a href="script.html">execute script</a></td>
+							<td><a href="script.html">run script</a></td>
 							<td></td>
 						</tr>
 						<tr>
@@ -275,7 +275,17 @@
 						<tr>
 							<td>--log</td>
 							<td>log level</td>
-							<td>ALL | FINE | INFO | WARNING</td>
+							<td>all | fine | info | warning</td>
+						</tr>
+						<tr>
+							<td>-exec</td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=11078">execute command</a></td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=11078">exec expression</a></td>
+						</tr>
+						<tr>
+							<td>--apply</td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=11079">apply post-processing</a></td>
+							<td>artwork | nfo | date | import | prune</td>
 						</tr>
 						<tr>
 							<td>-clear-cache</td>
