Remove deprecated packages

--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -182,12 +182,10 @@
 					<span class="quote">Today is the day</span>
 					<h2>Download</h2>
 					<ul class="list">
-						<li>64-bit Windows Installer: <a href="@{link.release.prefix}_x64.msi">@{release}_x64.msi</a></li>
-						<li>32-bit Windows Installer: <a href="@{link.release.prefix}_x86.msi">@{release}_x86.msi</a></li>
+						<li>Windows Installer: <a href="@{link.release.prefix}_x64.msi">@{release}_x64.msi</a></li>
 						<li>Windows Portable ZIP: <a href="@{link.release.prefix}-portable.zip">@{release}-portable.zip</a></li>
 						<li>macOS installer: <a href="@{link.release.prefix}.pkg">@{release}.pkg</a></li>
 						<li>macOS app bundle: <a href="@{link.release.prefix}.app.tar.xz">@{release}.app.tar.xz</a></li>
-						<li>Debian package: <a href="@{link.release.prefix}_amd64.deb">@{release}_amd64.deb</a> <small class="comment">(requires OpenJDK 11)</small></li>
 						<li>Debian Buster / Ubuntu 18.10 package: <a href="@{link.release.prefix}_universal.deb">@{release}_universal.deb</a> <small class="comment">(requires OpenJDK 11)</small></li>
 						<li>Debian Stretch / Raspberry Pi package: <a href="@{link.release.prefix}_universal-jdk8.deb">@{release}_universal-jdk8.deb</a> <small class="comment">(requires OpenJDK 8)</small></li>
 						<li>Fedora / openSUSE / CentOS package: <a href="@{link.release.prefix}_universal-jdk8.rpm">@{release}_universal-jdk8.rpm</a> <small class="comment">(requires OpenJDK 8)</small></li>
