--- a/www.filebot.net/eula.html
+++ b/www.filebot.net/eula.html
@@ -16,14 +16,14 @@
 			</div>
 			<div class="content">
 				<p class="important">
-					IMPORTANT: PLEASE READ THE TERMS AND CONDITIONS OF THIS LICENCE AGREEMENT CAREFULLY BEFORE USING THE SOFTWARE.
+					IMPORTANT: PLEASE READ THE TERMS AND CONDITIONS OF THIS LICENSE AGREEMENT CAREFULLY BEFORE USING THE SOFTWARE.
 				</p>
 
 				<ol>
 					<li>
-						<b>Grant of Licence</b>
+						<b>Grant of License</b>
 						<p>
-							When downloading / installing and / or using the Software offered by Point Planck Limited, (the "Licensor") grants you (the "Licensee") a non-exclusive, non-transferable License for the software products including (if applicable) electronic documentation and associated material (the "Software"). This License governs also any update or new version or release of the Software. This License applies also if you have downloaded the Software form websites or e-shops other than Licensor's website. Unless it was specified at the time of delivery or download, the License permits you to use the Software for single user use only upon the terms and subject to the conditions contained herein.</p>
+							When downloading / installing and / or using the Software offered by Point Planck Limited, (the "Licensor") grants you (the "Licensee") a non-exclusive, non-transferable License for the software products including (if applicable) electronic documentation and associated material (the "Software"). This License governs also any update or new version or release of the Software. This License applies also if you have downloaded the Software from websites or e-shops other than Licensor's website. Unless it was specified at the time of delivery or download, the License permits you to use the Software for single user use only upon the terms and subject to the conditions contained herein.</p>
 						<p>
 							To the extent that the Software includes or interfaces with third parties' software (including adds-on or extension programs), the respective licensing provisions issued by such third parties shall apply and the Licensee undertakes to comply with them.
 						</p>
@@ -33,7 +33,7 @@
 					</li>
 
 					<li>
-						<b>Licence Fee</b>
+						<b>License Fee</b>
 						<p>
 							Unless otherwise specified by the Licensor, the Software is NOT free or shareware. The License Fee is specified is indicated by the Licensor and to be paid by you at the time of delivery or downloading of the Software.
 						</p>
@@ -55,7 +55,7 @@
 								to ensure that your employees, agents and other parties who will use the Software are notified of this License and the terms hereof prior to such employee, agent or party using the same;
 							</li>
 							<li>
-								not to display or make available the Software on a public bulletin board, ftp site, worldwide web site, chat room or by any other unauthorized means;
+								not to display or make available the Software on a public bulletin board, ftp site, web site, chat room or by any other unauthorized means;
 							</li>
 							<li>
 								not to transfer, communicate or make available any license or license key that was given by the Licensor to install or use the Software;
@@ -73,7 +73,7 @@
 								The Licensor warrants that the Software will substantially operate in accordance with the user instructions contained in the materials delivered with the Software.
 							</li>
 							<li>
-								You acknowledge that software in general is not error-free and agree that the existence of such errors shall not constitute a breach of this License. The Licensor may create new versions of the Software ("upgrades") which may correct such errors and although the Licensor has no obligation to notify existing licensees of such upgrades, the same will be made available at the same internet site as you downloaded / ordered the Software accompanying this License, at such cost as shall be indicated.
+								You acknowledge that the Software in general is not error-free and agree that the existence of such errors shall not constitute a breach of this License. The Licensor may create new versions of the Software ("upgrades") which may correct such errors and although the Licensor has no obligation to notify existing licensees of such upgrades, the same will be made available at the same internet site as you downloaded / ordered the Software accompanying this License, at such cost as shall be indicated.
 							</li>
 							<li>
 								In the event that you discover a material error in the Software which substantially affects the use of the same and notify the Licensor of the error within 90 days from the date of this License, the Licensor shall at its sole option either refund the license fee or use all reasonable endeavors to correct by patch or new release (at its option) that part of the Software which does not so comply.
@@ -88,7 +88,7 @@
 								To the extent permitted by the applicable law, the Licensor disclaims all other warranties with respect to the Software, either express or implied, including but not limited to any implied warranties of merchantability or fitness for any particular purpose.
 							</li>
 							<li>
-								Without limiting the generality of the foregoing, Licensor disclaims any warranty in relation to:
+								Without limiting the generality of the foregoing, the Licensor disclaims any warranty in relation to:
 								<ul>
 									<li>
 										third parties' software, components and contents which may operate with the Software;
@@ -122,7 +122,7 @@
 						<b>Limitation of Liability</b>
 						<ol>
 							<li>
-								Any liability (whether in contract, tort or other legal basis) of the Licensor for the breach of any obligation hereunder (including breach of warranty) or in connection with the delivery to, or downloading or use by, you of the Software is excluded, unless the Licensor has acted gross negligently or in willful intent.
+								Any liability (whether in contract, tort or other legal basis) of the Licensor for the breach of any obligation hereunder (including breach of warranty) or in connection with the delivery to, or downloading or use by you, of the Software is excluded, unless the Licensor has acted gross negligently or in willful intent.
 							</li>
 							<li>
 								Notwithstanding the generality of Clause 5(a) above and to the maximum extent allowed under the applicable law, the Licensor expressly excludes liability for consequential loss, damage of, or corruption to, other software or data, or for loss of profit, business, revenue, goodwill or anticipated savings.
@@ -133,7 +133,7 @@
 					<li>
 						<b>Intellectual Property Rights</b>
 						<p>
-							All copyright, trade marks and other intellectual property rights subsisting in or used in connection with the Software (including but not limited to all images, animations, audio and other identifiable material relating to the Software) are and remain the sole property of the Licensor.
+							All copyright, trademarks and other intellectual property rights subsisting in or used in connection with the Software (including but not limited to all images, animations, audio and other identifiable material relating to the Software) are and remain the sole property of the Licensor.
 						</p>
 					</li>
 
@@ -157,7 +157,7 @@
 								Headings: The headings of the terms and conditions herein contained are inserted for convenience of reference only and are not intended to be part of or to affect the meaning or interpretation of any of the terms and conditions of this License.
 							</li>
 							<li>
-								Severability: In the event that any of these terms, conditions or provisions shall be determined by any competent authority to be invalid, unlawful or unenforceable to any extent, such term, condition or provision shall to that extent be severed from the remaining terms, conditions and provisions which shall continue to be valid to the fullest extent permitted by law and the invalid, unlawful or unenforceable provision shall be replaced by a valid, lawful and enforceable provision that, from its commercial purpose, it comes closed to the invalid, unlawful or unenforceable provision.
+								Severability: In the event that any of these terms, conditions or provisions shall be determined by any competent authority to be invalid, unlawful or unenforceable to any extent, such term, condition or provision shall to that extent be severed from the remaining terms, conditions and provisions which shall continue to be valid to the fullest extent permitted by law and the invalid, unlawful or unenforceable provision shall be replaced by a valid, lawful and enforceable provision that, from its commercial purpose, comes close to the invalid, unlawful or unenforceable provision.
 							</li>
 						</ol>
 					</li>
