Add {vs} to binding docs

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -525,9 +525,15 @@
 							<td>String</td>
 						</tr>
 						<tr>
-							<td>source</td>
-							<td>source medium</td>
+							<td>vs</td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=11265">source class</a></td>
 							<td>BluRay</td>
+							<td>String</td>
+						</tr>
+						<tr>
+							<td>source</td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=11265">source match</a></td>
+							<td>BD25</td>
 							<td>String</td>
 						</tr>
 						<tr>
