{az} sort collection name initial

--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -292,7 +292,7 @@
 						</tr>
 						<tr>
 							<td>az</td>
-							<td>sort name initial</td>
+							<td>sort collection name initial</td>
 							<td>A</td>
 							<td>String</td>
 						</tr>
