macOS portable app bundle

--- a/www.filebot.net/download.html
+++ b/www.filebot.net/download.html
@@ -42,7 +42,7 @@
 					<h2>FileBot for macOS</h2>
 					<ul class="list">
 						<li>macOS installer: <a href="@{link.release.prefix}.pkg">@{release}.pkg</a></li>
-						<li>macOS app bundle: <a href="@{link.release.prefix}.app.tar.xz">@{release}.app.tar.xz</a></li>
+						<li>macOS portable app bundle: <a href="@{link.release.prefix}.app.tar.xz">@{release}.app.tar.xz</a></li>
 						<li>macOS package is available <a href="mac/brew.html">via brew cask</a></li>
 					</ul>
 				</div>
