Update post-checkout help page

--- a/www.filebot.net/purchase.html
+++ b/www.filebot.net/purchase.html
@@ -31,7 +31,7 @@
 
 			<div class="content">
 				<div class="screenshot" style="background-color: white; padding: 0px 0px 0px 0px">
-					<img alt="screenshot" src="screenshots/license.png" width="152" height="141">
+					<img alt="screenshot" src="screenshots/license.png" width="152" height="169">
 				</div>
 				<div class="section about">
 					<h2>Buy a License</h2>
@@ -59,8 +59,8 @@
 					</ul>
 				</div>
 
-				<p class="suggestion" style="margin-top: 250px">
-				Need some help getting started? Join the <a href="https://www.filebot.net/forums/viewforum.php?f=8">forums</a> and ask.
+				<p class="suggestion" style="margin-top: 120px; margin-bottom: 20px">
+				Please read to <a href="https://www.filebot.net/activate.html">How do I activate my license?</a> for details on license activation.
 				</p>
 
 				<div class="footer">
