--- a/www.filebot.net/success.html
+++ b/www.filebot.net/success.html
@@ -28,7 +28,7 @@
 
 			<div class="content">
 				<div class="screenshot">
-					<img alt="screenshot" src="images/mail.png" width="240" height="154">
+					<img alt="screenshot" src="images/mail.png" width="240" height="154" />
 				</div>
 				<div class="section about">
 					<h2 style="margin-left: 60px">Thank you for purchasing FileBot! 💯</h2>
@@ -51,10 +51,10 @@
 					Please <strong>Select & Copy</strong> your <strong>License Key</strong> and then click on <strong>Paste License Key</strong> in the FileBot application when prompted. Please make sure to select the <acronym title="-----BEGIN PGP SIGNED MESSAGE-----&#13;⋮&#13;-----BEGIN PGP SIGNATURE-----&#13;⋮&#13;-----END PGP SIGNATURE-----">entire text in the grey area</acronym> in the <strong>License Key</strong> section.
 					</p>
 					<div class="screenshot" style="float: left; margin: 10px 15px">
-						<img alt="License Key" src="screenshots/license.key.png" width="365" height="534">
+						<img alt="License Key" src="screenshots/license.key.png" width="365" height="534" />
 					</div>
 					<div class="screenshot" style="float: left; margin: 10px 0px">
-						<img alt="Paste License Key" src="screenshots/license.png" width="152" height="169">
+						<img alt="Paste License Key" src="screenshots/license.png" width="152" height="169" />
 					</div>
 				</div>
 
