--- a/www.filebot.net/success.html
+++ b/www.filebot.net/success.html
@@ -33,7 +33,7 @@
 				<div class="section about">
 					<h2 style="margin-left: 60px">Thank you for purchasing FileBot! 💯</h2>
 					<p>
-					Your license has been issued and will arrive in your mail box shortly. You will receive <a target="_blank" href="https://www.filebot.net/activate.html">2 emails</a>. The first email from <a target="_blank" href="mailto:help@paddle.com">help@paddle.com</a> will contain your License Key as plain text. The second email from <a target="_blank" href="mailto:license@filebot.net">license@filebot.net</a> will contain your License File as email attachment. Either one can be used to activate FileBot.
+					Your license has been issued and will arrive in your mail box shortly. You will receive <a target="_blank" href="https://www.filebot.net/activate.html">2 emails</a>. The first email from <a target="_blank" href="mailto:help@paddle.com">help@paddle.com</a> will contain your License Key as plain text. The second email from <a target="_blank" href="mailto:license@filebot.net">license@filebot.net</a> will contain your License File as attachment. Either one can be used to activate FileBot.
 					</p>
 
 					<div class="review message box">
