--- a/www.filebot.net/thanks.html
+++ b/www.filebot.net/thanks.html
@@ -51,7 +51,7 @@
 					Please <strong>Select & Copy</strong> your <strong>License Key</strong> and then click on <strong>Paste License Key</strong> in the FileBot application when prompted. Please make sure to select the <acronym title="-----BEGIN PGP SIGNED MESSAGE-----&#13;⋮&#13;-----BEGIN PGP SIGNATURE-----&#13;⋮&#13;-----END PGP SIGNATURE-----">entire text in the grey area</acronym> in the <strong>License Key</strong> section.
 					</p>
 					<div class="screenshot" style="float: left; margin: 10px 15px">
-						<img alt="License Key" src="screenshots/license.key.png" width="365" height="534" />
+						<img alt="Copy License Key" src="screenshots/license.key.png" width="365" height="534" />
 					</div>
 					<div class="screenshot" style="float: left; margin: 10px 0px">
 						<img alt="Paste License Key" src="screenshots/license.png" width="152" height="169" />
