--- a/www.filebot.net/thanks.html
+++ b/www.filebot.net/thanks.html
@@ -66,7 +66,7 @@
 					<img class="icon" src="images/contact.png" alt="contact" width="48" height="48" />
 					<h2>Contact</h2>
 					<p>
-						If you have received <strong>no email</strong> at all then you have likely <a target="_blank" href="https://www.filebot.net/forums/viewtopic.php?t=11131">mistyped your email address</a> or your mail server is <a target="_blank" href="https://www.filebot.net/forums/viewtopic.php?t=11131">rejecting or misclassifying your emails as spam</a>. Please <a target="_blank" href="https://paddle.net/charge">contact Paddle</a> so they can update their records and resend your License Key to a valid email address.
+						If you have received <strong>no email</strong> at all then you have likely <a target="_blank" href="https://www.filebot.net/forums/viewtopic.php?t=11131">mistyped your email address</a> or your mail server is <a target="_blank" href="https://www.filebot.net/forums/viewtopic.php?t=11131">rejecting emails</a>. Please <a target="_blank" href="https://paddle.net/charge">contact Paddle</a> so they can update their records and resend your License Key to a valid email address.
 					</p>
 					<p>
 						<a target="_blank" href="https://www.filebot.net/forums/viewtopic.php?t=11131">Paddle.com</a> is the Merchant of Record for all our orders. Paddle provides all customer service inquiries and handles returns. Please <a target="_blank" href="https://paddle.net/charge">contact Paddle</a> if you have any questions regarding your purchase.
