Use https for all 3rd party websites

--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -131,12 +131,12 @@
 							</div>
 							Rename and move hundreds of media files in a matter of seconds
 						</li>
-						<li>Fetch episode info from <a href="http://thetvdb.com">TheTVDB</a>, <a href="http://anidb.net">AniDB</a> or <a href="http://www.tvmaze.com">TVmaze</a></li>
+						<li>Fetch episode info from <a target="_blank" href="https://thetvdb.com/">TheTVDB</a>, <a target="_blank" href="https://anidb.net/">AniDB</a> or <a target="_blank" href="https://www.tvmaze.com/">TVmaze</a></li>
 						<li>Accurate and robust and simply awesome file / episode matching logic</li>
 						<li>Series / Anime / Movie name auto-detection</li>
 						<li>Powerful and highly customizable <a class="important" href="naming.html">episode naming scheme</a><br/><span class="note mediainfo">MediaInfo optional</span></li>
 						<li>Supports language preferences for series and episode titles</li>
-						<li>Supports movie identification and renaming via <a href="http://www.themoviedb.org">TheMovieDB</a></li>
+						<li>Supports movie identification and renaming via <a target="_blank" href="https://www.themoviedb.org/">TheMovieDB</a></li>
 						<li>Reverse rename files using internal history or the original torrent file</li>
 					</ul>
 					<ul class="list next" id="subtitles">
@@ -146,7 +146,7 @@
 									<img width="150" height="118" src="screenshots/small/panel.subtitle.png" alt="Download subtitles" />
 								</a>
 							</div>
-							Download subtitles from <a href="http://www.opensubtitles.org">OpenSubtitles</a>
+							Download subtitles from <a target="_blank" href="https://www.opensubtitles.org/">OpenSubtitles</a>
 						</li>
 						<li>Advanced logic for matching files to most suitable subtitles</li>
 						<li>Find <dfn>exact</dfn> subtitles on OpenSubtitles</li>
@@ -169,7 +169,7 @@
 					</ul>
 					<ul class="list next" id="tools">
 						<li>
-							Identify and rename music using <a target="_blank" href="http://acoustid.org">AcoustID</a> audio-fingerprints and <a target="_blank" href="http://musicbrainz.org">MusicBrainz</a> info.
+							Identify and rename music using <a target="_blank" href="https://acoustid.org/">AcoustID</a> audio-fingerprints and <a target="_blank" href="https://musicbrainz.org/">MusicBrainz</a> info.
 						</li>
 						<li>
 							Extract files from <acronym title=".zip files">zip</acronym>, multi-volume <acronym title=".rar files">rar</acronym> and <acronym title=".7z files">7zip</acronym> archives as well as <acronym title=".ISO files">ISO images</acronym>.
@@ -231,7 +231,7 @@
 					<p>
 						The project is continuously seeking for improvements, so any kind of <a target="_blank" href="forums/viewforum.php?f=8">feedback</a> is more than welcome 
 						and if there's any questions or problems just start posting in the <a target="_blank" href="forums/">forums</a> or check the <a target="_blank" href="manual.html"><acronym title="frequently asked questions">FAQ</acronym></a>.
-						We're social as well. Follow us on <a target="_blank" href="https://twitter.com/filebot_renamer">twitter</a>, become a fan on <a target="_blank" href="https://www.facebook.com/filebot">facebook</a> or join our <a href="https://discord.gg/skTt2em">Discord </a> channel.
+						We're social as well. Follow us on <a target="_blank" href="https://twitter.com/filebot_renamer">twitter</a>, become a fan on <a target="_blank" href="https://www.facebook.com/filebot">facebook</a> or join our <a target="_blank" href="https://discord.gg/skTt2em">Discord </a> channel.
 					</p>
 				</div>
 			</div>
