--- a/www.filebot.net/thanks.html
+++ b/www.filebot.net/thanks.html
@@ -39,7 +39,7 @@
 					<div class="review message box">
 						<img src="images/information.png" width="48" height="48" style="float: left; margin: 0px 5px 50px 0px" />
 						<p>
-						Please store your License File carefully and make sure to keep a copy on Google Drive. If you lose both your License Key and your License File, then you may <u>not</u> be able to recover your license in case of data loss, and you may need to purchase a new one.
+						Please store your License File carefully and make sure to keep a copy on Google Drive. If you lose both your License Key and your License File, you may <u>not</u> be able to recover your license in case of data loss, and you may need to purchase a new one.
 						</p>
 					</div>
 				</div>
