[DOCS] Custom Rename Action

--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -163,7 +163,7 @@
 						</tr>
 						<tr>
 							<td>--action</td>
-							<td>rename action</td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=4915">rename action</a></td>
 							<td>move | copy | keeplink | symlink | hardlink | test</td>
 						</tr>
 						<tr>
