Fix broken links

--- a/www.filebot.net/script.html
+++ b/www.filebot.net/script.html
@@ -105,7 +105,7 @@
 
 					<h2 class="reference" id="functions">
 						Function Reference
-						<a href="https://github.com/filebot/filebot/blob/master/source/net/filebot/cli/ScriptShellBaseClass.java" class="source" target="_blank">source</a>
+						<a href="https://www.filebot.net/docs/api/net/filebot/cli/ScriptShellBaseClass.html" class="source" target="_blank">source</a>
 					</h2>
 
 					<div class="documentation">
@@ -206,7 +206,7 @@
 					<div class="documentation">
 					<h4>Extras</h4>
 					<div>
-						<a href="https://github.com/filebot/filebot/blob/master/source/net/filebot/cli/ScriptShellMethods.java">ScriptShellMethods</a> also defines lots of extra useful functions 
+						<a href="https://www.filebot.net/docs/api/net/filebot/cli/ScriptShellMethods.html">ScriptShellMethods</a> also defines lots of extra useful functions 
 						and there is example code in the <a href="https://github.com/filebot/scripts">script repository</a>.
 					</div>
 					</div>
