Update navigation links

--- a/www.filebot.net/thanks.html
+++ b/www.filebot.net/thanks.html
@@ -11,9 +11,9 @@
 			<div class="navigation">
 				<div>
 				<ul>
-					<li><a target="_blank" href="https://www.filebot.net/forums/">Forums</a></li>
-					<li><a target="_blank" href="https://www.filebot.net/forums/viewtopic.php?t=7">FAQ</a></li>
-					<li><a target="_blank" href="https://www.filebot.net/#download">Download</a></li>
+					<li><a href="https://www.filebot.net/forums/">Forums</a></li>
+					<li><a href="https://www.filebot.net/manual.html">FAQ</a></li>
+					<li><a href="https://www.filebot.net/#download">Download</a></li>
 				</ul>
 				</div>
 			</div>
