--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -34,8 +34,8 @@
 			<div class="navigation">
 				<div>
 					<ul>
-						<li><a href="forums/">Forums</a></li>
-						<li><a href="manual.html">FAQ</a></li>
+						<li><a href="https://www.filebot.net/forums/">Forums</a></li>
+						<li><a href="https://www.filebot.net/manual.html">FAQ</a></li>
 						<li><a href="#download">Download</a></li>
 					</ul>
 				</div>
