--- a/www.filebot.net/purchase.html
+++ b/www.filebot.net/purchase.html
@@ -15,7 +15,7 @@
 				<div>
 				<ul>
 					<li><a href="https://www.filebot.net/forums/">Forums</a></li>
-					<li><a href="https://www.filebot.net/forums/viewtopic.php?f=3&amp;t=7">FAQ</a></li>
+					<li><a href="https://www.filebot.net/manual.html">FAQ</a></li>
 					<li><a href="https://www.filebot.net/#download">Download</a></li>
 				</ul>
 				</div>
