--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -21,7 +21,7 @@
 				<div>
 				<ul>
 					<li><a href="https://www.filebot.net/forums/">Forums</a></li>
-					<li><a href="https://www.filebot.net/forums/viewtopic.php?f=3&amp;t=7">FAQ</a></li>
+					<li><a href="https://www.filebot.net/manual.html">FAQ</a></li>
 					<li><a href="https://www.filebot.net/#download">Download</a></li>
 				</ul>
 				</div>
@@ -46,7 +46,7 @@
 					or in scripts for automation running tasks like renaming TV shows and movies, fetching subtitles or checking SFV files.
 					</p>
 					<p style="width: 420px">
-					The CLI is designed for simple tasks. Please have a look at <a href="script.html">Scripts and Automation</a> for something more powerful and find scripts for many common tasks <a href="https://www.filebot.net/forums/viewtopic.php?f=4&t=5#p5">here</a>.
+					The CLI is designed for simple tasks. Please have a look at <a href="script.html">Scripts and Automation</a> for something more powerful and find scripts for many common tasks <a href="https://www.filebot.net/forums/viewtopic.php?t=5">here</a>.
 					</p>
 					<h2 id="examples">Examples</h2>
 					<h3 id="rename">Rename</h3>
