--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -46,7 +46,7 @@
 					<p>
 					You can easily define your own episode and movie naming schemes. It uses <a href="http://groovy-lang.org/">Groovy</a> expressions, 
 					which means that you can do pretty much anything, especially if you know a little bit about programming. 
-					You even get media info bindings. You can find <a href="https://www.filebot.net/forums/viewtopic.php?f=5&amp;t=2#p51">predefined format expressions</a> for all kinds of scenarios in the forums. Ready for you to just copy &amp; paste.
+					You even get media info bindings. You can find <a href="https://www.filebot.net/forums/viewtopic.php?t=2">predefined format expressions</a> for all kinds of scenarios in the forums. Ready for you to just copy &amp; paste.
 					</p>
 					<h2 id="examples">Examples</h2>
 					<p>
@@ -561,10 +561,10 @@
 							<td>String</td>
 						</tr>
 						<tr>
-							<td>history</td>
-							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=5#p2459">original path</a></td>
-							<td>&lt;file path&gt;</td>
-							<td>File</td>
+							<td>historic</td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?p=2459#p2459">original path</a></td>
+							<td>&lt;bindings&gt;</td>
+							<td>[String:Any]</td>
 						</tr>
 						<tr>
 							<td>info</td>
