Add links for @file syntax

--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -159,7 +159,7 @@
 						<tr>
 							<td>--format</td>
 							<td><a href="naming.html">naming scheme</a></td>
-							<td><a href="naming.html">format expression</a></td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=3244">format expression</a></td>
 						</tr>
 						<tr>
 							<td>--action</td>
@@ -174,12 +174,12 @@
 						<tr>
 							<td>--filter</td>
 							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=2127">match filter</a></td>
-							<td>filter expression</td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=3244">filter expression</a></td>
 						</tr>
 						<tr>
 							<td>--mapper</td>
 							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=10996">episode mapper</a></td>
-							<td>mapper expression</td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=3244">mapper expression</a></td>
 						</tr>
 						<tr>
 							<td>-get-subtitles</td>
