--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -748,13 +748,13 @@
 						</tr>
 						<tr>
 							<td>AnimeList</td>
-							<td><a href="https://github.com/ScudLee/anime-lists">Anime Lists</a> mapper</td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=10996">Anime Lists mapper</a></td>
 							<td>&lt;mapping&gt;</td>
 							<td>Episode</td>
 						</tr>
 						<tr>
 							<td>XEM</td>
-							<td><a href="http://thexem.de/">XEM</a> mapper</td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=10996">XEM mapper</a></td>
 							<td>&lt;mapping&gt;</td>
 							<td>Episode</td>
 						</tr>
