--- a/www.filebot.net/script.html
+++ b/www.filebot.net/script.html
@@ -102,11 +102,7 @@
 </code></pre>Print media info for all video files using the given format pattern.</div>
 
 
-					<h2 class="reference" id="functions">
-						Function Reference
-						<a href="https://www.filebot.net/docs/api/net/filebot/cli/ScriptShellBaseClass.html" class="source" target="_blank">source</a>
-					</h2>
-
+					<h2 class="reference" id="functions">Function Reference</h2>
 					<div class="documentation">
 					<h4>Rename media files</h4>
 					<pre><span class="return">File[]</span> <span class="method">rename</span>(<span class="property">folder</span>|<span class="property">file</span>, <span class="property">query</span>, <span class="property">output</span>, <span class="property">format</span>, <span class="property">db</span>, <span class="property">lang</span>, <span class="property">strict</span>)</pre>
