Link to our own xattr docs instead of Wikipedia

--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -304,7 +304,7 @@
 						</tr>
 						<tr>
 							<td>-no-xattr</td>
-							<td>disable <a href="https://en.wikipedia.org/wiki/Extended_file_attributes">extended attributes</a></td>
+							<td>disable <a href="https://www.filebot.net/help/xattr.html">extended attributes</a></td>
 							<td></td>
 						</tr>
 						<tr>
