--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -198,14 +198,14 @@
 						</tr>
 						<tr>
 							<td>-non-strict</td>
-							<td>opportunistic match mode</td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=4695">opportunistic match mode</a></td>
 							<td>
 								<table>
 								<tr>
 									<td>Rename mode: required for tricky filenames</td>
 								</tr>
 								<tr>
-									<td>Subtitle mode: <a href="https://www.filebot.net/forums/viewtopic.php?t=2615" target="_blank">enable fuzzy search</a></td>
+									<td>Subtitle mode: <a href="https://www.filebot.net/forums/viewtopic.php?t=2615">enable fuzzy search</a></td>
 								</tr>
 							</table>
 							</td>
