--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -140,13 +140,13 @@
 							<td>
 							<table>
 								<tr>
-									<td>Series mode: TheTVDB, AniDB</td>
+									<td>TheTVDB, AniDB <small class="comment">(Series Mode)</small></td>
 								</tr>
 								<tr>
-									<td>Movie mode: TheMovieDB, OMDb</td>
+									<td>TheMovieDB, OMDb <small class="comment">(Movie Mode)</small></td>
 								</tr>
 								<tr>
-									<td>Music mode: AcoustID, ID3</td>
+									<td>AcoustID, ID3 <small class="comment">(Music Mode)</small></td>
 								</tr>
 							</table>
 							</td>
@@ -154,7 +154,7 @@
 						<tr>
 							<td>--order</td>
 							<td>episode numbering</td>
-							<td>airdate | absolute | dvd</td>
+							<td>Airdate | Absolute | DVD</td>
 						</tr>
 						<tr>
 							<td>--format</td>
@@ -164,7 +164,7 @@
 						<tr>
 							<td>--action</td>
 							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=4915">rename action</a></td>
-							<td>move | copy | keeplink | symlink | hardlink | test</td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=4915">move | copy | symlink | hardlink | test</a></td>
 						</tr>
 						<tr>
 							<td>--conflict</td>
@@ -193,8 +193,8 @@
 						</tr>
 						<tr>
 							<td>--lang</td>
-							<td><a href="http://en.wikipedia.org/wiki/List_of_ISO_639-1_codes">2-letter language code</a></td>
-							<td>en, de, fr, es, ja, zh, ...</td>
+							<td>language code</td>
+							<td>English | French | German | Chinese | etc</td>
 						</tr>
 						<tr>
 							<td>-non-strict</td>
@@ -202,10 +202,10 @@
 							<td>
 								<table>
 								<tr>
-									<td>Rename mode: required for tricky filenames</td>
+									<td>enable <a href="https://www.filebot.net/forums/viewtopic.php?t=4695">opportunistic matching</a> <small class="comment">(Rename Mode)</small></td>
 								</tr>
 								<tr>
-									<td>Subtitle mode: <a href="https://www.filebot.net/forums/viewtopic.php?t=2615">enable fuzzy search</a></td>
+									<td>enable <a href="https://www.filebot.net/forums/viewtopic.php?t=2615">fuzzy subtitle search</a> <small class="comment">(Subtitle Mode)</small></td>
 								</tr>
 							</table>
 							</td>
@@ -218,7 +218,7 @@
 						<tr>
 							<td>--file-filter</td>
 							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=4222">input file filter</a></td>
-							<td>file filter expression</td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=3244">file filter expression</a></td>
 						</tr>
 						<tr>
 							<td>-check</td>
@@ -236,13 +236,13 @@
 							<td>
 							<table>
 								<tr>
-									<td>rename mode: output folder</td>
+									<td>output folder <small class="comment">(Rename Mode)</small></td>
 								</tr>
 								<tr>
-									<td>subtitle mode: srt <small class="comment">(e.g. transcode subtitles)</small></td>
+									<td>srt <small class="comment">(Subtitle Mode)</small></td>
 								</tr>
 								<tr>
-									<td>checksum mode: sfv, md5, sha256</td>
+									<td>sfv | md5 | sha256 <small class="comment">(Checksum Mode)</small></td>
 								</tr>
 							</table>
 							</td>
@@ -250,7 +250,7 @@
 						<tr>
 							<td>--encoding</td>
 							<td>output charset</td>
-							<td>UTF-8, Windows-1252, GB18030, ...</td>
+							<td>UTF-8 | Windows-1252 | GB18030 | etc</td>
 						</tr>
 						<tr>
 							<td>-list</td>
@@ -274,7 +274,7 @@
 						</tr>
 						<tr>
 							<td>--log</td>
-							<td>log level</td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=3913">log level</a></td>
 							<td>all | fine | info | warning</td>
 						</tr>
 						<tr>
@@ -289,12 +289,12 @@
 						</tr>
 						<tr>
 							<td>-clear-cache</td>
-							<td>clear cache</td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=1996">clear cache</a></td>
 							<td></td>
 						</tr>
 						<tr>
 							<td>-clear-prefs</td>
-							<td>reset application settings</td>
+							<td><a href="https://www.filebot.net/forums/viewtopic.php?t=4205">reset application settings</a></td>
 							<td></td>
 						</tr>
 						<tr>
@@ -304,7 +304,7 @@
 						</tr>
 						<tr>
 							<td>-no-xattr</td>
-							<td>disable <a href="https://www.filebot.net/help/xattr.html">extended attributes</a></td>
+							<td>disable <a href="https://www.filebot.net/forums/viewtopic.php?t=324">extended attributes</a></td>
 							<td></td>
 						</tr>
 						<tr>
