--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -186,8 +186,7 @@
 						<li>Windows Portable ZIP: <a href="@{link.release.prefix}-portable.zip">@{release}-portable.zip</a></li>
 						<li>macOS installer: <a href="@{link.release.prefix}.pkg">@{release}.pkg</a></li>
 						<li>macOS portable app bundle: <a href="@{link.release.prefix}.app.tar.xz">@{release}.app.tar.xz</a></li>
-						<li>Debian Buster / Ubuntu 18.10 package: <a href="@{link.release.prefix}_universal.deb">@{release}_universal.deb</a> <small class="comment">(requires OpenJDK 11)</small></li>
-						<li>Debian Stretch / Raspberry Pi package: <a href="@{link.release.prefix}_universal-jdk8.deb">@{release}_universal-jdk8.deb</a> <small class="comment">(requires OpenJDK 8)</small></li>
+						<li>Debian / Ubuntu package: <a href="@{link.release.prefix}_universal.deb">@{release}_universal.deb</a> <small class="comment">(requires OpenJDK 11)</small></li>
 						<li>Fedora / openSUSE / CentOS package: <a href="@{link.release.prefix}_universal-jdk8.rpm">@{release}_universal-jdk8.rpm</a> <small class="comment">(requires OpenJDK 8)</small></li>
 						<li>POSIX portable tarball: <a href="@{link.release.prefix}-portable.tar.xz">@{release}-portable.tar.xz</a> <small class="comment">for Linux, BSD and Solaris</small> <small class="comment">(requires OpenJDK 11)</small></li>
 						<li>Windows package is available <a href="windows/chocolatey.html">via Chocolatey</a></li>
