--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -186,7 +186,7 @@
 						<li>Windows Portable ZIP: <a href="@{link.release.prefix}-portable.zip">@{release}-portable.zip</a></li>
 						<li>macOS installer: <a href="@{link.release.prefix}.pkg">@{release}.pkg</a></li>
 						<li>macOS portable app bundle: <a href="@{link.release.prefix}.app.tar.xz">@{release}.app.tar.xz</a></li>
-						<li>Ubuntu / Debian package: <a href="@{link.release.prefix}_universal.deb">@{release}_universal.deb</a> <small class="comment">(requires OpenJDK 11)</small></li>
+						<li>Ubuntu / Debian package: <a href="@{link.release.prefix}_amd64.deb">@{release}_universal.deb</a></li>
 						<li>Ubuntu / Debian package is available <a href="linux/apt.html">via APT</a></li>
 						<li>Fedora / openSUSE / CentOS package: <a href="@{link.release.prefix}_universal-jdk8.rpm">@{release}_universal-jdk8.rpm</a> <small class="comment">(requires OpenJDK 8)</small></li>
 						<li>Fedora / openSUSE / CentOS package is available <a href="linux/yum.html">via DNF and YUM</a></li>
