Universal Linux package

--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -186,16 +186,17 @@
 						<li>Windows Portable ZIP: <a href="@{link.release.prefix}-portable.zip">@{release}-portable.zip</a></li>
 						<li>macOS installer: <a href="@{link.release.prefix}.pkg">@{release}.pkg</a></li>
 						<li>macOS portable app bundle: <a href="@{link.release.prefix}.app.tar.xz">@{release}.app.tar.xz</a></li>
-						<li>Ubuntu / Debian package: <a href="@{link.release.prefix}_amd64.deb">@{release}_universal.deb</a></li>
+						<li>Ubuntu / Debian package: <a href="@{link.release.prefix}_amd64.deb">@{release}_amd64.deb</a></li>
 						<li>Ubuntu / Debian package is available <a href="linux/apt.html">via APT</a></li>
-						<li>Fedora / openSUSE / CentOS package: <a href="@{link.release.prefix}_universal-jdk8.rpm">@{release}_universal-jdk8.rpm</a> <small class="comment">(requires OpenJDK 8)</small></li>
+						<li>Fedora / openSUSE / CentOS package: <a href="@{link.release.prefix}_amd64.rpm">@{release}_amd64.rpm</a>
 						<li>Fedora / openSUSE / CentOS package is available <a href="linux/yum.html">via DNF and YUM</a></li>
-						<li>POSIX portable tarball: <a href="@{link.release.prefix}-portable.tar.xz">@{release}-portable.tar.xz</a> <small class="comment">for other Linux and FreeBSD devices</small> <small class="comment">(requires OpenJDK 11)</small></li>
+						<li>POSIX portable tarball: <a href="@{link.release.prefix}-portable.tar.xz">@{release}-portable.tar.xz</a> <small class="comment">for other Linux and FreeBSD devices</small></li>
 						<li>Windows package is available <a href="windows/chocolatey.html">via Chocolatey</a></li>
 						<li>macOS package is available <a href="mac/brew.html">via brew cask</a></li>
 						<li>Synology NAS package is available <a href="linux/syno.html">via Package Center</a></li>
 						<li>QNAP NAS package is available <a href="linux/qnap.html">via App Center</a></li>
 						<li>Arch Linux package is available <a href="linux/aur.html">via AUR</a></li>
+						<li>Universal Linux package is available <a href="linux/snap.html">via Snapcraft</a></li>
 						<li>Docker images are available <a href="linux/docker.html">on Docker Hub</a></li>
 						<li>All packages are available on our <a href="https://get.filebot.net/filebot/">Release Index</a></li>
 					</ul>
